Add a workaround for Qt 6 lupdate bug QTBUG-128904

With the previous commit in place, building with `-DUSE_QT6`
now also uses the Qt 6 lupdate and lrelease.
This resulted in the following warnings being triggered
when running `make messages`:

        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:52: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:60: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:75: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:78: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:81: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:86: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:87: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:88: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:89: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:90: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:104: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:105: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:111: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:117: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:124: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:125: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:130: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:142: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:166: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:172: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:177: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:183: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:188: tr() cannot be called without context
        /home/michi/development/git/bibletime/src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog.cpp:191: tr() cannot be called without context

According to my analysis, this looks like a bug in the
Qt 6 version of lupdate as newly reported as QTBUG-128904 [1].

To work around it, move the `SourceProtocol` enum class
from src/frontend/bookshelfwizard/cswordsetupinstallsourcesdialog
to the header.

[1] https://bugreports.qt.io/browse/QTBUG-128904